--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ http://www.templatemo.com/tm-498-stimulus
                     <li><a href="#home" class="smoothScroll">Home</a></li>
                     <li><a href="#about" class="smoothScroll">About Me</a></li>
                     <li><a href="#experience" class="smoothScroll">Project</a></li>
-                    <li><a href="#quotes" class="smoothScroll">Certifications</a></li>
+                    <li><a href="#quotes" class="smoothScroll">Training</a></li>
                     <li><a href="#contact" class="smoothScroll">Contact</a></li>
                </ul>
           </div>
@@ -106,8 +106,8 @@ http://www.templatemo.com/tm-498-stimulus
                          </div>
                          <div class="wow fadeInUp" data-wow-delay="0.8s">
                               <p></p>
-                              <p>To secure a responsible career opportunity where I can Utilize my skills and contribute to the 
-                                   growth of organization and my professional career</p>
+                              <p>Self-motivated,ambitious and driven fresher, looking for an opportunity in a challenging  organisation such that I can Utilize my skills and contribute to the 
+                                   growth of organization and my professional career </p>
                          </div>
                     </div>
                </div>
@@ -269,7 +269,7 @@ http://www.templatemo.com/tm-498-stimulus
 
                <div class="col-md-offset-1 col-md-10 col-sm-12">
                     <i class="wow fadeInUp fa fa-star" data-wow-delay="0.6s"></i>
-                    <h2 class="wow fadeInUp" data-wow-delay="0.8s"><b>Certification</b></h2>
+                    <h2 class="wow fadeInUp" data-wow-delay="0.8s"><b>Training &Experience</b></h2>
                     <p class="wow fadeInUp" data-wow-delay="1s"><b> Certified for Completing Full Stack .NET Developer in Simplilearn</b></p>
                </div>
 
@@ -286,27 +286,7 @@ http://www.templatemo.com/tm-498-stimulus
 
                <div class="col-md-6 col-sm-12">
                     <div class="contact-form">
-                         <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-                              <h1 class="color-white">CONTACT</h1>
-                              <p class="color-white">Interested in working together?<br>Let's talk</p>
-                         </div>
-
-                         <div id="contact-form">
-                              <form action="#template-mo" method="post">
-                                   <div class="wow fadeInUp" data-wow-delay="1s">
-                                        <input name="fullname" type="text" class="form-control" id="fullname" placeholder="Your Name">
-                                   </div>
-                                   <div class="wow fadeInUp" data-wow-delay="1.2s">
-                                        <input name="email" type="email" class="form-control" id="email" placeholder="Your Email">
-                                   </div>
-                                   <div class="wow fadeInUp" data-wow-delay="1.4s">
-                                        <textarea name="message" rows="5" class="form-control" id="message" placeholder="Write your message..."></textarea>
-                                   </div>
-                                   <div class="wow fadeInUp col-md-6 col-sm-8" data-wow-delay="1.6s">
-                                        <input name="submit" type="submit" class="form-control" id="submit" value="Send">
-                                   </div>
-                              </form>
-                         </div>
+                         
 
                     </div>
                </div>
